fix: svg import test